# ora-rs

./: .gitignore  Cargo.toml  binding.d.ts  binding.js  index.d.ts  index.js  index.ts  package.json  pnpm-lock.yaml  rspack.config.js  test.js  tsconfig.json  type.ts
__test__/: index.spec.mjs
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  option.rs  spinner.rs  stdin_discarder.rs
src/utils/: mod.rs  spinner_data.rs  spinner_names.rs  spinners_data.rs  stream.rs
